<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/model_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/radio_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/simple_model" />

        <RadioButton
            android:id="@+id/radio_uv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uv_model" />

    </RadioGroup>

    <TextView
        android:id="@+id/media_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_media_type"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/model_radio_group"/>

    <CheckBox
        android:id="@+id/media_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fetch_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media_type" />

</androidx.constraintlayout.widget.ConstraintLayout>