<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_dialog_bg">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_password"
        android:textColor="@color/text_color_black"
        android:fontFamily="@font/poppins"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayoutBlack"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:drawableTint="@color/black"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/text_color_black"
            android:hint="@string/current_password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayoutBlack"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:drawableTint="@color/black"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/text_color_black"
            android:hint="@string/new_password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayoutBlack"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:drawableTint="@color/black"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/text_color_black"
            android:hint="@string/confirm_new_password"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/update_password"
        android:padding="10dp"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="bold"
        android:background="@drawable/rounded_img_bg"/>

</LinearLayout>