<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="2"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/title"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/date"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit"
                android:padding="8dp"
                android:src="@drawable/ic_edit"
                android:visibility="gone"
                app:tint="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/post_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="4"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/description"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/post_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/post"
                android:visibility="gone" />

            <VideoView
                android:id="@+id/post_vid"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/play_vid"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_bg"
                android:contentDescription="@string/post"
                android:src="@android:drawable/ic_media_play"
                android:visibility="gone"
                app:tint="@color/dark_blue_grey" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/voting_ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/voting_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/question"
                android:textAlignment="center"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/real_vote_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/real_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_img_bg"
                        android:backgroundTint="@color/vote_green"
                        android:contentDescription="@string/real"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/real"
                        android:textColor="@color/text_color_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/real_vote_result" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/fake_vote_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/fake_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_img_bg"
                        android:backgroundTint="@color/vote_red"
                        android:contentDescription="@string/fake"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/fake"
                        android:textColor="@color/text_color_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fake_vote_result" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/voting_dur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/voting_duration"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/voting_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/result"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/view_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/view_comments"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
